--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.1"
+    "ionic": "driftyco/ionic-bower#1.3.1",
+    "angular-mocks": "1.3.13"
   },
   "dependencies": {
     "ngCordova": "^0.1.27-alpha"
