--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.1.1",
   "description": "shiftninja: An Ionic project",
   "dependencies": {
+    "angular-route": "^1.5.8",
+    "express": "~4.4.3",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "express": "~4.4.3"
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
