--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "angular-mocks": "1.3.13"
   },
   "dependencies": {
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
+    "ionic-datepicker": "^1.2.1",
+    "ionic-timepicker": "^0.6.0"
   }
 }
