--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "scripts": {
+    "postinstall": "bower cache clean && bower install"
+    }
   },
   "devDependencies": {
     "bower": "^1.3.3",
