--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "bower": "^1.3.3",
     "scripts": {
     "postinstall": "bower cache clean && bower install"
     }
