--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-sass": "^2.0.4",
     "bower": "^1.3.3",
     "scripts": {
-    "postinstall": "bower cache clean && bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
     }
   },
   "devDependencies": {
