--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-sass": "^2.0.4",
     "bower": "^1.3.3",
     "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+      "postinstall": "./node_modules/bower/bin/bower install"
     }
   },
   "devDependencies": {
@@ -22,6 +22,7 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "shelljs": "^0.3.0"
   },
