--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
